--- a/requirements.txt
+++ b/requirements.txt
@@ -15,3 +15,13 @@ tenacity
 tools
 transformers
 html2text
+scrapy
+
+#OCR
+torch>=1.9.0
+torchvision>=0.10.0
+numpy>=1.21.0
+opencv-python>=4.5.3
+Pillow>=8.2.0
+pytesseract>=0.3.8
+easyocr>=1.4
