--- a/config/long_text.yaml
+++ b/config/long_text.yaml
@@ -2,22 +2,22 @@ version: '1.2'
 
 variables:
   project_name: 'Complex Multi-agent Task Execution for long documentation'
-  topic: |
-    Writing an in-depth article that explains the use of multi-agent systems in artificial intelligence.
-  language: Hungarian
-  minimum_word_count: 4000
-  file: content.md
-  directory: ./
-  roles:
-    - {"ResearchAssistant": "Responsible for conducting research and gathering content from the internet."}
-    - {"ContentStructuringAssistant": "Responsible for organizing the collected information and creating a table of contents."}
-    - {"WritingAssistant": "Responsible for writing each chapter of the article step by step."}
+  inputs:
+    topic: |
+      Writing an in-depth final thesis on How to use multi agent AI for finding kognitiv bias in interview transcipt and CV in the HR process .
+    language: Hungarian
+    minimum_word_count: 800
+    file: ./content.md
+    roles:
+      - {"ResearchAssistant": "Responsible for conducting research and gathering content from the internet."}
+      - {"ContentStructuringAssistant": "Responsible for organizing the collected information and creating a table of contents."}
+      - {"WritingAssistant": "Responsible for writing each chapter of the article step by step."}
  
   steps:
     Write a detailed document:
       participants: ["ResearchAssistant", "ContentStructuringAssistant", "WritingAssistant"]
-      objective: "Create a detailed article on multi-agent systems in AI, complete with research, structuring, writing."
-      output: "Final article stored in a {file} in the {directory}"
+      objective: "Create a detailed article {topic}, complete with research, structuring, writing."
+      output: "Final article stored in the {file} file."
 
 agents:
   ChatManager:
@@ -31,12 +31,12 @@ agents:
       - Begin by assigning research tasks to the ResearchAssistant.
       - Once the research is completed, assign the ContentStructuringAssistant to create a detailed table of contents based on the research.
       - The WritingAssistant will then write **one section at a time of the article according to the generated table of contents**. Ensure that the content exactly follows the structured sections and subsections.
-      - Continue iterating through each section until the full article is completed, ensuring it meets the {minimum_word_count} word minimum requirement.
-      - Important: Instruct the ContentStructuringAssistant and the WritingAssistant to save all of its output in './content.md' file.
-      - Continue iterating through each section with WritingAssistant until the full article is completed, ensuring it meets the 4000-word minimum requirement.
-      - When all sections are written and reviewed, combine them from the memory into one complete document and return it as the final answer.
-
-      When all the needed assistants have finished their jobs, the task is completed. You must then return with <CAMEL_TASK_DONE>. 
+      - Continue iterating through each section until the full article is completed, ensuring each section meets the {minimum_word_count} word minimum requirement.
+      - Important: All the time add to the 'Action input' that the ContentStructuringAssistant and the WritingAssistant must save all of its output in the {file} file.
+      - Important: All the time add to the 'Action input' that the solution should be in {language} language!
+      - Important: All the time add to the 'Action input' that the created section must meets the {minimum_word_count} word minimum requirement.!
+      - Continue iterating through each section with WritingAssistant until the full article is completed, ensuring it meets the {minimum_word_count} word minimum requirement.
+      - When all sections are written and saved you must then return with <CAMEL_TASK_DONE>. 
       
       You must instruct the assistants based on their expertise and your needs to complete the task ONLY in the following format:
 
@@ -47,6 +47,7 @@ agents:
         "Action Input": "<DETAILED_INSTRUCTION_FOR_ASSISTANT>",
         "Observation": "<RESULT_OF_ASSISTANT'S_WORK>"
       }
+      Important: The "Action field all the time contains the name of the specific <ASSISTANT> you delegate the task"
     tools: 
       pre-processing:
         - ReadFileTool
@@ -59,7 +60,7 @@ agents:
     role_description: "Conducts research and gathers up-to-date information from the internet based on the given topic."
     llm: "openai"
     system_prompt: |
-      Your task is to gather reliable and relevant information from credible sources for the topic 'The use of multi-agent systems in AI.'
+      Your task is to gather reliable and relevant information from credible sources for the {topic}.
       Provide detailed responses that are structured clearly, and include sources (URLs) for each piece of information.
       Unless I say the task is completed, you should always start with:
 
@@ -73,7 +74,7 @@ agents:
   ContentStructuringAssistant:
     type: "CAMELAgent"
     role_name: "Content Structuring Assistant"
-    role_description: "Responsible for organizing the research and creating a logical table of contents and store it in {directory}/{file} file ."
+    role_description: "Responsible for organizing the research and creating a logical table of contents and store it in {file} file ."
     llm: "openai"
     system_prompt: |
       Your task is to take the research gathered and organize it into a clear and logical structure.
@@ -90,7 +91,7 @@ agents:
   WritingAssistant:
     type: "CAMELAgent"
     role_name: "Writing Assistant"
-    role_description: "Writes each chapter of the article based on the structured content and store it in {directory}/{file} file ."
+    role_description: "Writes each chapter of the article based on the structured content and store it in {file} file ."
     llm: "openai"
     system_prompt: |
       Your task is to write **the full content** of each section of the article based on the structured content provided by the ContentStructuringAssistant.
@@ -98,6 +99,7 @@ agents:
       After each section is completed, append your solution in the given file 
 
       The content should match the table of contents exactly and cover all topics and subsections listed.
+      If you need more information on the subject, then use your tool to search relevant information on the internet.
 
       Unless I say the task is completed, you should always start with:
 
@@ -106,6 +108,8 @@ agents:
       <YOUR_SOLUTION> should be specific and provide preferable implementations and examples for task-solving.
       
     tools: 
+      pre-processing:
+        - SearchAndRetrieveTool
       post-processing:
         - AppendToFileTool
 
