--- a/config/long_text.yaml
+++ b/config/long_text.yaml
@@ -4,7 +4,8 @@ variables:
   project_name: 'Complex Multi-agent Task Execution for long documentation'
   inputs:
     topic: |
-      Writing an in-depth final thesis on How to use multi agent AI for finding kognitiv bias in interview transcipt and CV in the HR process .
+      Provide a comprehensive analysis as part of a final thesis on How to use multi agent AI for finding kognitiv bias in interview transcipt and CV in the HR process.
+      Use an engaging, conversational tone suitable for a university class."
     language: Hungarian
     minimum_word_count: 800
     file: ./content.md
@@ -31,11 +32,10 @@ agents:
       - Begin by assigning research tasks to the ResearchAssistant.
       - Once the research is completed, assign the ContentStructuringAssistant to create a detailed table of contents based on the research.
       - The WritingAssistant will then write **one section at a time of the article according to the generated table of contents**. Ensure that the content exactly follows the structured sections and subsections.
-      - Continue iterating through each section until the full article is completed, ensuring each section meets the {minimum_word_count} word minimum requirement.
+      - Continue iterating through each section with WritingAssistant until the full article is completed, ensuring it meets the {minimum_word_count} word minimum requirement.
       - Important: All the time add to the 'Action input' that the ContentStructuringAssistant and the WritingAssistant must save all of its output in the {file} file.
       - Important: All the time add to the 'Action input' that the solution should be in {language} language!
       - Important: All the time add to the 'Action input' that the created section must meets the {minimum_word_count} word minimum requirement.!
-      - Continue iterating through each section with WritingAssistant until the full article is completed, ensuring it meets the {minimum_word_count} word minimum requirement.
       - When all sections are written and saved you must then return with <CAMEL_TASK_DONE>. 
       
       You must instruct the assistants based on their expertise and your needs to complete the task ONLY in the following format:
@@ -60,8 +60,14 @@ agents:
     role_description: "Conducts research and gathers up-to-date information from the internet based on the given topic."
     llm: "openai"
     system_prompt: |
-      Your task is to gather reliable and relevant information from credible sources for the {topic}.
-      Provide detailed responses that are structured clearly, and include sources (URLs) for each piece of information.
+      Your task is to assist with gathering accurate and up-to-date information for the {topic} provided by the ChatManager.
+      You must perform thorough research on the internet and provide detailed responses to the instructions given.
+      Always prioritize reliable and credible sources.
+      Make sure the information is relevant.
+      You should respond with the full gathered information in a clear and concise manner.
+      Do not make assumptions; always rely on factual data.
+      Remember: all the time also provide the sources of your information as a URL.
+
       Unless I say the task is completed, you should always start with:
 
       Solution: <YOUR_SOLUTION>
@@ -96,10 +102,10 @@ agents:
     system_prompt: |
       Your task is to write **the full content** of each section of the article based on the structured content provided by the ContentStructuringAssistant.
       Ensure that the content exactly follows the structured table of contents, and write each section with sufficient depth, detail, and clarity. No summaries—only full content!
+      Extend your information on the section, by using your tool to search more relevant information on the internet.
       After each section is completed, append your solution in the given file 
 
       The content should match the table of contents exactly and cover all topics and subsections listed.
-      If you need more information on the subject, then use your tool to search relevant information on the internet.
 
       Unless I say the task is completed, you should always start with:
 
